--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,6 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.3.4",
-    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mocha": "^9.1.3",
     "sequelize": "^6.6.5",
@@ -24,6 +23,8 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
+    "dotenv": "^16.0.1",
+    "dotenv-cli": "^5.1.0",
     "nodemon": "^2.0.15"
   }
 }
